--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -2,3 +2,6 @@ jdbc.jdbcUrl=jdbc:mysql://localhost:3306/mall
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.user=root
 jdbc.password=mysql
+jdbc.testConnectionOnCheckout=false
+jdbc.testConnectionOnCheckin=true
+jdbc.idleConnectionTestPeriod=30
